--- a/index.html
+++ b/index.html
@@ -10,23 +10,61 @@
 	<title>pop viz</title>
 	<style>
 		html {
+			margin: 0;
+			padding: 0;
+			min-height: 100%;
+			position: relative;
 			background-color: lightgray;
+			overscroll-behavior: none;
 		}
 		body {
 			font-family: system-ui, -apple-system, sans-serif;
 			max-width: 100%;
-			margin: 20px auto;
+			margin: 0;
 			padding: 20px;
+			min-height: 100vh;
+			position: relative;
+		}
+		body.rainbow-mode {
+			background: linear-gradient(
+				180deg,
+				#ff000099 0%,
+				#ff800099 14%,
+				#ffff0099 28%,
+				#00ff0099 42%,
+				#00ffff99 56%,
+				#0000ff99 70%,
+				#8000ff99 84%,
+				#ff00ff99 100%
+			);
+			background-attachment: local;
+			background-repeat: no-repeat;
+			background-size: 100% 100%;
+
+			.stats {
+				color: white;
+				text-shadow: 1px 1px 2px #000000;
+			}
+			.title {
+				color: white;
+				text-shadow: 1px 1px 2px #000000;
+			}
 		}
 		.title {
 			text-align: center;
+			margin-top: 20px;
 		}
 		.input-container {
 			text-align: center;
 			margin-bottom: 20px;
 		}
-
-		input {
+		.toggle-container {
+			text-align: center;
+			margin-bottom: 20px;
+			font-size: 16px;
+			color: #333;
+		}
+		input[type="text"] {
 			font-size: 24px;
 			padding: 8px;
 			width: 200px;
@@ -34,11 +72,11 @@
 			padding-left: 20px;
 			padding-right: 20px;
 			outline: none;
+			background: white;
 		}
-
 		::placeholder {
 			text-align: center;
-			margin-bottom:10px;
+			margin-bottom: 10px;
 		}
 		.emoji-container {
 			font-size: 24px;
@@ -67,6 +105,11 @@
 			id="numberInput"
 			placeholder="enter a number..."
 			autocomplete="off">
+	</div>
+	<div class="toggle-container">
+		<label>
+			<input type="checkbox" id="rainbowToggle"> 🌈
+		</label>
 	</div>
 	<div class="stats" id="stats"></div>
 	<div class="emoji-container" id="emojiContainer"></div>
@@ -113,6 +156,13 @@
 			'🧒🏻', '🧒🏼', '🧒🏽', '🧒🏾', '🧒🏿',
 			'🧓🏻', '🧓🏼', '🧓🏽', '🧓🏾', '🧓🏿'
 		];
+
+		const rainbowToggle = document.getElementById('rainbowToggle');
+		rainbowToggle.checked = false;
+		document.body.classList.remove('rainbow-mode');
+		rainbowToggle.addEventListener('change', function() {
+			document.body.classList.toggle('rainbow-mode');
+		});
 
 		function getRandomEmoji() {
 			return emojiList[Math.floor(Math.random() * emojiList.length)];
